--- a/src/Pages/Basket/basket.module.css
+++ b/src/Pages/Basket/basket.module.css
@@ -3,13 +3,11 @@ div, h1, h2, p{
 }
 
 .basket{
-    height: 100vh;
+    height: 200vh;
     background-color: #161516;
 }
 
-body{
-    background-color: #161516;
-}
+
 
 .container{
     width: 800px;
@@ -29,9 +27,10 @@ body{
 
 .header{
     display: flex;
-    padding-top: 53px;
+    padding: 53px 70px 0px 70px;
     gap: 0 63px;
     margin-bottom: 38px;
+    justify-content: space-between;
 }
 
 .titleCard{
@@ -44,6 +43,7 @@ body{
     color: #D58C51;
     font-weight: 400;
     font-size: 18px;
+    
 }
 
 .card{
@@ -112,4 +112,18 @@ body{
 
 .cross{
     cursor: pointer;
+}
+
+.exit{
+    width: 200px;
+    height: 42px;
+    color: #D58C51;
+    border: 1px solid #D58C51;
+    background-color: #161516;
+    cursor: pointer;
+    
+}
+
+.exit:hover{
+    opacity: 0.7;
 }
